<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingBottom="@dimen/_20sdp">

    <LinearLayout
        android:id="@+id/dialogParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/saveOrDiscardToDoListText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:text="@string/saveOrDiscardNewToDoListHeader"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="sans-serif-black"
                android:text="@string/cancelString"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_15sdp" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/mediumGray"/>

            <TextView
                android:id="@+id/discardButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="sans-serif-black"
                android:text="@string/discardString"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_15sdp" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/mediumGray"/>

            <TextView
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="sans-serif-black"
                android:text="@string/saveString"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>