<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent" android:paddingBottom="5dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/changeDateOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_calendar_option"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:textSize="@dimen/_14sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/changeDateString"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/editTaskOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_edit_option"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:textSize="@dimen/_14sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/editTaskString" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/deleteTaskOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_delete_option"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:textSize="@dimen/_14sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/deleteTaskString" />

    </LinearLayout>

</LinearLayout>