<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/toDoListParent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".ToDoListActivity">

    <LinearLayout
        android:id="@+id/newToDoListHeaderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/newToDoListHeader"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:fontFamily="sans-serif-black"
            android:text="@string/saveHeader"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/_10sdp"
        android:layout_height="@dimen/_10sdp"
        android:orientation="horizontal"/>

    <TextView
        android:id="@+id/titleErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleBlankError"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fontFamily="sans"
        android:textStyle="italic"
        android:textSize="@dimen/_12sdp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/toDoListTitleSpacer"
            android:layout_width="@dimen/_10sdp"
            android:layout_height="match_parent"
            android:orientation="horizontal"/>

        <LinearLayout
            android:id="@+id/deleteButton"
            android:visibility="gone"
            android:gravity="center"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_delete_to_do_list" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center"
            android:background="@drawable/field_border"
            android:orientation="horizontal"
            android:layout_marginRight="@dimen/_10sdp">

            <EditText
                android:id="@+id/titleField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorPrimary"
                android:maxLines="1"
                android:inputType="text"
                android:hint="@string/toDoListTitleString"
                android:textSize="@dimen/_15sdp"/>

            <ImageView
                android:id="@+id/starredIcon"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_star_unchecked"
                android:layout_marginRight="@dimen/_10sdp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/_10sdp"
        android:layout_height="@dimen/_10sdp"
        android:orientation="horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/tasksHeader"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15sdp" />

        <LinearLayout
            android:id="@+id/addButton"
            android:gravity="center"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_add"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/notesButton"
            android:gravity="center"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_notes"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/noContentsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/noTasksAddedPrompt"
        android:textColor="@color/mediumGray"
        android:textSize="@dimen/_12sdp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/tasksContainer"/>

    </ScrollView>

</LinearLayout>
