<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/toDoListsParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/toDoListsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/toDoListsHeader"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15sdp" />

        <EditText
            android:id="@+id/searchField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/searchToDoListsPrompt"
            android:maxLines="1"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:layout_weight="1"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/addButton"
            android:src="@drawable/ic_add"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"/>

        <ImageView
            android:id="@+id/searchButton"
            android:src="@drawable/ic_search_primary"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"/>

        <ImageView
            android:id="@+id/removeButton"
            android:src="@drawable/ic_remove_primary"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"/>

    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_marginBottom="@dimen/_10sdp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/sortByLayout"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:background="@drawable/field_border"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/sortByLabel"
                    android:textSize="@dimen/_15sdp"/>

                <Spinner
                    android:id="@+id/sortBySpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent" />

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:src="@drawable/ic_keyboard_arrow_down"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/displayLayout"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:background="@drawable/field_border"
                android:layout_marginRight="@dimen/_10sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/displayLabel"
                    android:textSize="@dimen/_15sdp"/>

                <Spinner
                    android:id="@+id/displaySpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent" />

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:src="@drawable/ic_keyboard_arrow_down"/>

            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/toDoListsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

    <TextView
        android:id="@+id/noContactsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/noToDoListsPrompt"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:textColor="@color/mediumGray"
        android:textSize="@dimen/_12sdp"
        android:visibility="gone"/>

</LinearLayout>