<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/_10sdp">

    <LinearLayout
        android:id="@+id/dialogParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addNewContactActivityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:text="@string/addNewTaskHeader"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/toDoListsOptionsErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noToDoListSelectedError"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginLeft="@dimen/_10sdp"
            android:fontFamily="sans"
            android:textStyle="italic"
            android:textSize="@dimen/_12sdp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center"
            android:background="@drawable/field_border"
            android:orientation="horizontal"
            android:id="@+id/toDoListsSpinnerLayout"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:visibility="gone">

            <Spinner
                android:id="@+id/toDoListsSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@android:color/transparent"
                tools:ignore="Suspicious0dp" />

            <TextView
                android:id="@+id/toDoListsSpinnerText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:text="@string/selectToDoListOption"
                android:textSize="@dimen/_15sdp"/>

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:src="@drawable/ic_keyboard_arrow_down"/>

        </LinearLayout>

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taskBlankError"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginLeft="@dimen/_10sdp"
            android:fontFamily="sans"
            android:textStyle="italic"
            android:textSize="@dimen/_12sdp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/field_border"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp">

                <EditText
                    android:id="@+id/newTaskField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/taskString"
                    android:textSize="@dimen/_15sdp"/>

            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_check"
                android:layout_marginRight="@dimen/_10sdp"
                android:id="@+id/saveButton"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="sans-serif-black"
                android:text="Monday, January 11, 2021"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_15sdp" />

            <LinearLayout
                android:id="@+id/calendarButton"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:padding="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_calendar_primary" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>